fix: wrap span around menu text in mobile header

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -82,10 +82,6 @@ header {
 						background-color: $orange-focus;
 						color: $navy-light;
 					}
-
-					#menuToggleButton::after {
-						content: "Menu";
-					}
 				}
 			}
 
@@ -184,7 +180,9 @@ header {
 
 // This media query breakpoint comes the width of the Galaxy Fold screen.
 @media screen and (max-width: rem(280)) {
-	header .site-nav-wrapper .site-nav .nav-smallScreen .starter-nav #menuToggleButton::after {
-		content: "";
+	header .site-nav-wrapper .site-nav .nav-smallScreen .starter-nav #menuToggleButton {
+		span {
+			display: none;
+		}
 	}
 }
